# prefecture-quiz

./: .gitignore  README.md  TEST_PLAN.md  main.py  pyproject.toml  requirements.txt  run_app.sh
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml
app/: main.py
app/assets/: 01.json  01_subprefecture.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  (+10 more)
app/common/: const.py  pydeck.py  routing.py  step_by_step.py  test.py  utils.py
app/pages/: mapping_demo.py  quiz.py  study.py  test.py
tests/: test_const.py  test_quiz.py  test_step_by_step.py  test_utils.py
