[project]
name = "prefecture-quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "ricewin", email = "hiroccha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.52.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
