[project]
name = "prefecture-quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.53.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.13",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]
